// Code generated - DO NOT EDIT.
// This file is a generated protobuf definition and any manual changes will be lost.

syntax = "proto3";
package erc721;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/trylotus/connectors/ethnft/smart-contracts/erc721";


message Approval {
	google.protobuf.Timestamp ts = 1;
	bytes owner = 2; 
	bytes approved = 3; 
	bytes tokenId = 4; // uint256
	uint64 blockNumber = 5;
	uint64 logIndex = 6;
	bytes txHash = 7;
}

message ApprovalForAll {
	google.protobuf.Timestamp ts = 1;
	bytes owner = 2; 
	bytes operator = 3; 
	bool approved = 4; 
	uint64 blockNumber = 5;
	uint64 logIndex = 6;
	bytes txHash = 7;
}

message Transfer {
	google.protobuf.Timestamp ts = 1;
	bytes from = 2; 
	bytes to = 3; 
	bytes tokenId = 4; // uint256
	uint64 blockNumber = 5;
	uint64 logIndex = 6;
	bytes txHash = 7;
}
